- Added ReflectionClass::newInstanceArgs($args). (Marcus)
- Added imap_savebody() that allows message body to be written to a file. (Mike)
- Fixed imagecolorallocate() and imagecolorallocatelapha() to return FALSE
  on error. (Pierre)
- Fixed bug #36242 (Possible memory corruption in stream_select()). (Tony)
- Fixed bug #36235 (ocicolumnname returns false before a succesfull fetch). 
  (Tony)
- Fixed bug #36224 (date(DATE_ATOM) gives wrong results). (Derick, Hannes
  Magnusson)
- Fixed bug #36222 (errorInfo in PDOException is always NULL). (Ilia)
- Fixed bug #36208 (symbol namespace conflicts using bundled gd). (Jakub Moc)
- Fixed bug #36185 (str_rot13() crash on non-string parameter). (Pierre)
- Fixed bug #36176 (PDO_PGSQL - PDO::exec() does not return number of rows 
  affected by the operation). (Ilia)
- Fixed bug #36152 (problems with curl+ssl and pgsql+ssl in same PHP). (Mike)
- Fixed bug #36148 (unpack("H*hex", $data) is adding an extra character to the 
  end of the string). (Ilia)
- Fixed bug #36134 (DirectoryIterator constructor failed to detect empty 
  directory names). (Ilia)
- Fixed bug #36113 (Reading records of unsupported type causes segfault). 
  (Tony)
- Fixed bug #36096 (oci_result() returns garbage after oci_fetch() failed). 
  (Tony)
- Fixed bug #36071 (Engine Crash related with 'clone'). (Dmitry)
- Fixed bug #36055 (possible OCI8 crash in multithreaded environment). (Tony)
- Fixed bug #36046 (parse_ini_file() miscounts lines in multi-line values).
  (Ilia)
- Fixed bug #36038 (ext/hash compile failure on Mac OSX). (Tony)
- Fixed bug #36037 (heredoc adds extra line number). (Dmitry)
- Fixed bug #36016 (realpath cache memleaks). (Dmitry, Nuno)
- Fixed bug #36011 (Strict errormsg wrong for call_user_func() and the likes).
  (Marcus)
- Fixed bug #36006 (Problem with $this in __destruct()). (Dmitry)
- Fixed bug #35999 (recursive mkdir() does not work with relative path
  like "foo/bar"). (Tony)